--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>CURRICULUM</title>
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -14,7 +14,7 @@
         
             <section class="one">
                 <div class="imageprofile">
-                    <img src="/img/profile.jpg" width="200" height="200" class="img">
+                    <img src="/img/profile.jpg" alt="">
                 </div>
             </section>     
             
